Fixes tooltip overflow bug

--- a/src/Components/Tooltip/Tooltip.css
+++ b/src/Components/Tooltip/Tooltip.css
@@ -5,11 +5,21 @@
 
 .tooltip {
   position: absolute;
-  top: 25px;
-  right: 5px;
+  top: 100%;
+  right: 0;
   background-color: #f4e1c3;
   border: 1px solid #4f565c;
   min-width: 150px;
   padding: 5px;
   border-radius: 8px;
+  transform: translateX(50%);
+  max-width: calc(100vw - 30px);
+  box-sizing: border-box;
+  white-space: normal;
+}
+
+@media screen and (max-width: 767px) {
+  .left-tooltip {
+    transform: translateX(80%);
+  }
 }
